# swopy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  README.md  docs.md  plans.md  project_architecture.md  pyproject.toml  tox.toml  zensical.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  codeql.yml  publish.yaml  tag-and-release.yaml
docs/: index.md
docs/reference/: api.md  conlangs.md  systems.md  terms.md
numberology/: __init__.py  numberology.py  system.py
numberology/systems/: __init__.py  arabic.py  egyptian.py  latin.py  roman.py
scripts/: checks.sh  startup.sh  upgrade-python.sh
swopy/: __init__.py  swopy.py  system.py
swopy/systems/: __init__.py  _algorithms.py  _translations.py  arabic.py  aramaic.py  brahmi.py  brahmi_dravidian.py  brahmi_gupta.py  brahmi_tai.py  chinese.py  cuneiform.py  egyptian.py  ethiopic.py  etruscan.py  greek.py  hebrew.py  hindu_arabic.py  indic.py  inuit.py  iranic.py  kaktovik.py  kharosthi.py  mayan.py  medefaidrin.py  meroitic.py  mesopotamian.py  mongolian.py  nabataean.py  numeric_systems.py  pahlavi.py  phoenician.py  roman.py  semetic.py  sino_tibetan.py  siyaq.py  sogdian.py  south_arabian.py  tibetan.py  turkic.py
swopy/systems/conlangs/: __init__.py  cylenian.py  deini.py  dni.py  engsvanyali.py  ewellic.py  glaitha_a.py  kinya.py  klingon.py  mizarian.py  olaetyan.py  orokin.py  sadalian.py  shidinn.py  syrrin.py  tengwar.py  tonal.py  verdurian.py  zirinka.py
tests/: helpers.py  profiler.py  strategies.py  test_numberology.py  test_specifics.py  test_swopy.py  test_systems.py
tests/factory/: builders.py  factory.py  numeric_type.py  test_strategy_factory.py
tests/strategy_factory/: builders.py  factory.py  numeric_type.py  test_strategy_factory.py
