[project]
name = "swopy"
version = "0.1.0"
description = "A collection of numeral system converters."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Ben", email = "2551337+ben-alexander@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Typing :: Typed",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []


[dependency-groups]
dev = [
    "deptry",
    "hypothesis",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.coverage.run]
relative_files=true
omit=[
    "tests/*",
]

[tool.deptry.package_module_name_map]
hypothesis="hypothesis"
pre_commit="pre_commit"
pyright="pyright"
pytest="pytest"
pytest-cov="pytest_cov"
ruff="ruff"

[tool.pyright]
reportMissingTypeStubs=false
reportMissingImports=false # Ignore external dependencies
typeCheckingMode="strict"
include = ["swopy"]

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
addopts = "--strict-markers"
markers = [
    "external: requires external dependencies"
    ]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swopy"]
include = [
    "/swopy/py.typed",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
publish-url = "https://test.pypi.org/legacy/"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ARG", # flake8-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # McCabe complexity
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "ERA", # eradicate (commented out code)
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "PL",  # Pylint
    "PLC", # Pylint - Convention
    "PLE", # Pylint - Error
    "PTH", # flake8-pathlib
    "PLR", # Pylint - Refactor
    "PLW", # Pylint - warnings
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings  
    "YTT", # flake8-2020
]
extend-fixable = ["UP015"]

[tool.ruff.lint.isort]
known-first-party=["swopy"]

[tool.ruff.lint.per-file-ignores]
# Disable certain checks in tests
"tests/**/*.py" = [
    "S101", # Allow assert
]
